[package]
name = "podcast_search"
version = "0.1.0"
edition = "2018"
authors = ["Nathan Jaremko <njaremko@gmail.com>"]
description = "A library that facilitates searching for podcasts using the iTunes Podcast API"
license = "MIT"
readme = "README.md"
keywords = ["audio", "search", "podcast", "music"]
repository = "https://github.com/njaremko/podcast_search"

[dependencies]
futures = "0.3"
reqwest = { version = "0.10", features = ["default-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"
thiserror = "1.0"